--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,11 @@
 language: crystal
+
+env: LIBGIT2=~/libgit2/_install/ LD_LIBRARY_PATH=~/libgit2/_install/lib LIBRARY_PATH=~/libgit2/_install/lib
+
+before_install:
+  - sudo apt-get install -y cmake
+  - ./.travis.sh
+
+script:
+  - git clone https://github.com/erikbern/git-of-theseus
+  - crystal run src/git-of-theseus.cr -- --outdir got git-of-theseus
