--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,12 @@ script:
   - crystal run src/git-of-theseus.cr -- --outdir got git-of-theseus
 
 before_deploy:
-  - crystal build --release src/git-of-theseus.cr
+  - crystal build --release src/git-of-theseus.cr -o git-of-theseus_linux_amd64
 
 deploy:
   provider: releases
   api_key: $GITHUB_TOKEN
-  file: git-of-theseus
+  file: git-of-theseus_linux_amd64
   skip_cleanup: true
   on:
     tags: true
